service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-k8s-example-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    name: http
  - port: 8081
    targetPort: 8081
    nodePort: 30081
    name: management
  selector:
    app: spring-k8s-example-app
  type: NodePort
