ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-example-ingress
spec:
  backend:
    serviceName: spring-example-service
    servicePort: 8080
